resources/grammer.js
var PEG = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { Start: peg$parseStart },
        peg$startRuleFunction  = peg$parseStart,

        peg$c0 = { type: "other", description: "start" },
        peg$c1 = peg$FAILED,
        peg$c2 = null,
        peg$c3 = function(c) {
        			return {
        				line: line(),
        				column: column(),
        				offset: offset(),
        				endPos: peg$currPos,
        				syntax: "Start",
        				content: c
        			};
        		},
        peg$c4 = { type: "other", description: "chapters" },
        peg$c5 = function(c, cc) {
        			var processed = [c];
        			if (cc) {
        				if (Array.isArray(cc.content)) {
        					cc.content.forEach(function (c) {
        						processed.push(c);
        					});
        				} else {
        					processed.push(cc.content);
        				}
        			}
        			return {
        				line: line(),
        				column: column(),
        				offset: offset(),
        				endPos: peg$currPos,
        				syntax: "Chapters",
        				content: processed
        			};
        		},
        peg$c6 = { type: "other", description: "chapter" },
        peg$c7 = function(headline, text) {
        				return {
        					syntax: "Chapter",
        					line: line(),
        					column: column(),
        					offset: offset(),
        					endPos: peg$currPos,
        					headline: headline,
        					text: text
        				};
        			},
        peg$c8 = { type: "other", description: "headline" },
        peg$c9 = [],
        peg$c10 = "=",
        peg$c11 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c12 = function(level, label, caption) {
        				return {
        					syntax: "Headline",
        					line: line(),
        					column: column(),
        					offset: offset(),
        					endPos: peg$currPos,
        					level: level.length,
        					label: label,
        					caption: caption
        				};
        			},
        peg$c13 = { type: "other", description: "contents" },
        peg$c14 = void 0,
        peg$c15 = { type: "any", description: "any character" },
        peg$c16 = function(c, cc) {
        			var processed = [c];
        			if (cc) {
        				if (Array.isArray(cc.content)) {
        					cc.content.forEach(function (c) {
        						processed.push(c);
        					});
        				} else {
        					processed.push(cc.content);
        				}
        			}
        			return {
        				line: line(),
        				column: column(),
        				offset: offset(),
        				endPos: peg$currPos,
        				syntax: "Contents",
        				content: processed
        			};
        		},
        peg$c17 = { type: "other", description: "content" },
        peg$c18 = function(c) {
        			return {
        				line: line(),
        				column: column(),
        				offset: offset(),
        				endPos: peg$currPos,
        				syntax: "Content",
        				content: c
        			};
        		},
        peg$c19 = { type: "other", description: "paragraph" },
        peg$c20 = function(c) {
        			return {
        				line: line(),
        				column: column(),
        				offset: offset(),
        				endPos: peg$currPos,
        				syntax: "Paragraph",
        				content: c
        			};
        		},
        peg$c21 = { type: "other", description: "paragraph subs" },
        peg$c22 = function(c, cc) {
        			var processed = [c];
        			if (cc) {
        				if (Array.isArray(cc.content)) {
        					cc.content.forEach(function (c) {
        						processed.push(c);
        					});
        				} else {
        					processed.push(cc.content);
        				}
        			}
        			return {
        				line: line(),
        				column: column(),
        				offset: offset(),
        				endPos: peg$currPos,
        				syntax: "ParagraphSubs",
        				content: processed
        			};
        		},
        peg$c23 = { type: "other", description: "paragraph sub" },
        peg$c24 = function(c) {
        			return {
        				line: line(),
        				column: column(),
        				offset: offset(),
        				endPos: peg$currPos,
        				syntax: "ParagraphSub",
        				content: c
        			};
        		},
        peg$c25 = { type: "other", description: "text of content" },
        peg$c26 = /^[^\r\n]/,
        peg$c27 = { type: "class", value: "[^\\r\\n]", description: "[^\\r\\n]" },
        peg$c28 = function(text) {
        			return {
        				line: line(),
        				column: column(),
        				offset: offset(),
        				endPos: peg$currPos,
        				syntax: "ContentText",
        				text: text
        			};
        		},
        peg$c29 = { type: "other", description: "block element" },
        peg$c30 = "//",
        peg$c31 = { type: "literal", value: "//", description: "\"//\"" },
        peg$c32 = "{",
        peg$c33 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c34 = "//}",
        peg$c35 = { type: "literal", value: "//}", description: "\"//}\"" },
        peg$c36 = function(symbol, args, contents) {
        					return {
        						syntax: "BlockElement",
        						line: line(),
        						column: column(),
        						offset: offset(),
        						endPos: peg$currPos,
        						symbol: symbol,
        						args: args,
        						content: contents
        					};
        				},
        peg$c37 = function(symbol, args) {
        					return {
        						syntax: "BlockElement",
        						line: line(),
        						column: column(),
        						offset: offset(),
        						endPos: peg$currPos,
        						symbol: symbol,
        						args: args,
        						content: []
        					};
        				},
        peg$c38 = { type: "other", description: "inline element" },
        peg$c39 = "@<",
        peg$c40 = { type: "literal", value: "@<", description: "\"@<\"" },
        peg$c41 = /^[^>\r\n]/,
        peg$c42 = { type: "class", value: "[^>\\r\\n]", description: "[^>\\r\\n]" },
        peg$c43 = ">",
        peg$c44 = { type: "literal", value: ">", description: "\">\"" },
        peg$c45 = "}",
        peg$c46 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c47 = function(symbol, contents) {
        				return {
        					syntax: "InlineElement",
        					line: line(),
        					column: column(),
        					offset: offset(),
        					endPos: peg$currPos,
        					symbol: symbol,
        					content: contents
        				};
        			},
        peg$c48 = { type: "other", description: "column" },
        peg$c49 = function(headline, text) {
        				return {
        					syntax: "Column",
        					line: line(),
        					column: column(),
        					offset: offset(),
        					endPos: peg$currPos,
        					headline: headline,
        					text: text
        				};
        			},
        peg$c50 = { type: "other", description: "column headline" },
        peg$c51 = "[column]",
        peg$c52 = { type: "literal", value: "[column]", description: "\"[column]\"" },
        peg$c53 = function(level, caption) {
        				return {
        					syntax: "ColumnHeadline",
        					line: line(),
        					column: column(),
        					offset: offset(),
        					endPos: peg$currPos,
        					level: level.length,
        					caption: caption
        				};
        			},
        peg$c54 = { type: "other", description: "column contents" },
        peg$c55 = function(c, cc) {
        			var processed = [c];
        			if (cc) {
        				if (Array.isArray(cc.content)) {
        					cc.content.forEach(function (c) {
        						processed.push(c);
        					});
        				} else {
        					processed.push(cc.content);
        				}
        			}
        			return {
        				line: line(),
        				column: column(),
        				offset: offset(),
        				endPos: peg$currPos,
        				syntax: "ColumnContents",
        				content: processed
        			};
        		},
        peg$c56 = { type: "other", description: "column content" },
        peg$c57 = function(c) {
        			return {
        				line: line(),
        				column: column(),
        				offset: offset(),
        				endPos: peg$currPos,
        				syntax: "ColumnContent",
        				content: c
        			};
        		},
        peg$c58 = { type: "other", description: "column terminator" },
        peg$c59 = "[/column]",
        peg$c60 = { type: "literal", value: "[/column]", description: "\"[/column]\"" },
        peg$c61 = function(level) {
        				return {
        					syntax: "ColumnTerminator",
        					line: line(),
        					column: column(),
        					offset: offset(),
        					endPos: peg$currPos,
        					level: level.length
        				};
        			},
        peg$c62 = { type: "other", description: "bracket argument" },
        peg$c63 = "[",
        peg$c64 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c65 = /^[^\r\n\]]/,
        peg$c66 = { type: "class", value: "[^\\r\\n\\]]", description: "[^\\r\\n\\]]" },
        peg$c67 = "]",
        peg$c68 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c69 = function(arg) {
        				return {
        					syntax: "BracketArg",
        					line: line(),
        					column: column(),
        					offset: offset(),
        					endPos: peg$currPos,
        					arg: arg
        				};
        			},
        peg$c70 = { type: "other", description: "brace argument" },
        peg$c71 = /^[^\r\n}]/,
        peg$c72 = { type: "class", value: "[^\\r\\n}]", description: "[^\\r\\n}]" },
        peg$c73 = function(arg) {
        				return {
        					syntax: "BraceArg",
        					line: line(),
        					column: column(),
        					offset: offset(),
        					endPos: peg$currPos,
        					arg: arg
        				};
        			},
        peg$c74 = { type: "other", description: "contents of block element" },
        peg$c75 = function(c, cc) {
        			var processed = [c];
        			if (cc) {
        				if (Array.isArray(cc.content)) {
        					cc.content.forEach(function (c) {
        						processed.push(c);
        					});
        				} else {
        					processed.push(cc.content);
        				}
        			}
        			return {
        				line: line(),
        				column: column(),
        				offset: offset(),
        				endPos: peg$currPos,
        				syntax: "BlockElementContents",
        				content: processed
        			};
        		},
        peg$c76 = { type: "other", description: "content of block element" },
        peg$c77 = function(c) {
        			return {
        				line: line(),
        				column: column(),
        				offset: offset(),
        				endPos: peg$currPos,
        				syntax: "BlockElementContent",
        				content: c
        			};
        		},
        peg$c78 = { type: "other", description: "paragraph in block" },
        peg$c79 = { type: "other", description: "paragraph subs in block" },
        peg$c80 = { type: "other", description: "paragraph sub in block" },
        peg$c81 = { type: "other", description: "text of content in block" },
        peg$c82 = { type: "other", description: "contents of inline element" },
        peg$c83 = function(c, cc) {
        			var processed = [c];
        			if (cc) {
        				if (Array.isArray(cc.content)) {
        					cc.content.forEach(function (c) {
        						processed.push(c);
        					});
        				} else {
        					processed.push(cc.content);
        				}
        			}
        			return {
        				line: line(),
        				column: column(),
        				offset: offset(),
        				endPos: peg$currPos,
        				syntax: "InlineElementContents",
        				content: processed
        			};
        		},
        peg$c84 = { type: "other", description: "content of inline element" },
        peg$c85 = function(c) {
        			return {
        				line: line(),
        				column: column(),
        				offset: offset(),
        				endPos: peg$currPos,
        				syntax: "InlineElementContent",
        				content: c
        			};
        		},
        peg$c86 = { type: "other", description: "text of inline element" },
        peg$c87 = function(text) {
        			return {
        				line: line(),
        				column: column(),
        				offset: offset(),
        				endPos: peg$currPos,
        				syntax: "InlineElementContentText",
        				text: text
        			};
        		},
        peg$c88 = { type: "other", description: "inline content" },
        peg$c89 = function(c) {
        			return {
        				line: line(),
        				column: column(),
        				offset: offset(),
        				endPos: peg$currPos,
        				syntax: "SinglelineContent",
        				content: c
        			};
        		},
        peg$c90 = { type: "other", description: "children of inline content" },
        peg$c91 = function(c, cc) {
        			var processed = [c];
        			if (cc) {
        				if (Array.isArray(cc.content)) {
        					cc.content.forEach(function (c) {
        						processed.push(c);
        					});
        				} else {
        					processed.push(cc.content);
        				}
        			}
        			return {
        				line: line(),
        				column: column(),
        				offset: offset(),
        				endPos: peg$currPos,
        				syntax: "ContentInlines",
        				content: processed
        			};
        		},
        peg$c92 = { type: "other", description: "child of inline content" },
        peg$c93 = function(c) {
        			return {
        				line: line(),
        				column: column(),
        				offset: offset(),
        				endPos: peg$currPos,
        				syntax: "ContentInline",
        				content: c
        			};
        		},
        peg$c94 = { type: "other", description: "text of child of inline content" },
        peg$c95 = function(text) {
        			return {
        				line: line(),
        				column: column(),
        				offset: offset(),
        				endPos: peg$currPos,
        				syntax: "ContentInlineText",
        				text: text
        			};
        		},
        peg$c96 = { type: "other", description: "ulist" },
        peg$c97 = function(c, cc) {
        			var processed = [c];
        			if (cc) {
        				if (Array.isArray(cc.content)) {
        					cc.content.forEach(function (c) {
        						processed.push(c);
        					});
        				} else {
        					processed.push(cc.content);
        				}
        			}
        			return {
        				line: line(),
        				column: column(),
        				offset: offset(),
        				endPos: peg$currPos,
        				syntax: "Ulist",
        				content: processed
        			};
        		},
        peg$c98 = { type: "other", description: "ulist element" },
        peg$c99 = " ",
        peg$c100 = { type: "literal", value: " ", description: "\" \"" },
        peg$c101 = "*",
        peg$c102 = { type: "literal", value: "*", description: "\"*\"" },
        peg$c103 = function(level, text) {
        				return {
        					syntax: "UlistElement",
        					line: line(),
        					column: column(),
        					offset: offset(),
        					endPos: peg$currPos,
        					level: level.length,
        					text: text
        				};
        			},
        peg$c104 = { type: "other", description: "olist" },
        peg$c105 = function(c, cc) {
        			var processed = [c];
        			if (cc) {
        				if (Array.isArray(cc.content)) {
        					cc.content.forEach(function (c) {
        						processed.push(c);
        					});
        				} else {
        					processed.push(cc.content);
        				}
        			}
        			return {
        				line: line(),
        				column: column(),
        				offset: offset(),
        				endPos: peg$currPos,
        				syntax: "Olist",
        				content: processed
        			};
        		},
        peg$c106 = { type: "other", description: "olist element" },
        peg$c107 = ".",
        peg$c108 = { type: "literal", value: ".", description: "\".\"" },
        peg$c109 = function(n, text) {
        				return {
        					syntax: "OlistElement",
        					line: line(),
        					column: column(),
        					offset: offset(),
        					endPos: peg$currPos,
        					no: parseInt(n),
        					text: text
        				};
        			},
        peg$c110 = { type: "other", description: "dlist" },
        peg$c111 = function(c, cc) {
        			var processed = [c];
        			if (cc) {
        				if (Array.isArray(cc.content)) {
        					cc.content.forEach(function (c) {
        						processed.push(c);
        					});
        				} else {
        					processed.push(cc.content);
        				}
        			}
        			return {
        				line: line(),
        				column: column(),
        				offset: offset(),
        				endPos: peg$currPos,
        				syntax: "Dlist",
        				content: processed
        			};
        		},
        peg$c112 = { type: "other", description: "dlist element" },
        peg$c113 = ":",
        peg$c114 = { type: "literal", value: ":", description: "\":\"" },
        peg$c115 = function(text, content) {
        				return {
        					syntax: "DlistElement",
        					line: line(),
        					column: column(),
        					offset: offset(),
        					endPos: peg$currPos,
        					text: text,
        					content: content
        				};
        			},
        peg$c116 = { type: "other", description: "content of dlist element" },
        peg$c117 = /^[ \t]/,
        peg$c118 = { type: "class", value: "[ \\t]", description: "[ \\t]" },
        peg$c119 = function(c) {
        			return {
        				line: line(),
        				column: column(),
        				offset: offset(),
        				endPos: peg$currPos,
        				syntax: "DlistElementContent",
        				content: c
        			};
        		},
        peg$c120 = { type: "other", description: "signle line comment" },
        peg$c121 = "#@",
        peg$c122 = { type: "literal", value: "#@", description: "\"#@\"" },
        peg$c123 = function(text) {
        			return {
        				line: line(),
        				column: column(),
        				offset: offset(),
        				endPos: peg$currPos,
        				syntax: "SinglelineComment",
        				text: text
        			};
        		},
        peg$c124 = { type: "other", description: "digits" },
        peg$c125 = { type: "other", description: "digit" },
        peg$c126 = /^[0-9]/,
        peg$c127 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c128 = { type: "other", description: "lower alphabet" },
        peg$c129 = /^[a-z]/,
        peg$c130 = { type: "class", value: "[a-z]", description: "[a-z]" },
        peg$c131 = { type: "other", description: "newline" },
        peg$c132 = "\r\n",
        peg$c133 = { type: "literal", value: "\r\n", description: "\"\\r\\n\"" },
        peg$c134 = "\n",
        peg$c135 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c136 = { type: "other", description: "spacer" },
        peg$c137 = /^[ \t\r\n]/,
        peg$c138 = { type: "class", value: "[ \\t\\r\\n]", description: "[ \\t\\r\\n]" },
        peg$c139 = { type: "other", description: "space" },
        peg$c140 = /^[ \u3000\t]/,
        peg$c141 = { type: "class", value: "[ \\u3000\\t]", description: "[ \\u3000\\t]" },
        peg$c142 = { type: "other", description: "end of file" },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$cache = {},
        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parseStart() {
      var s0, s1, s2, s3;

      var key    = peg$currPos * 47 + 0,
          cached = peg$cache[key];

      if (cached) {
        peg$currPos = cached.nextPos;
        return cached.result;
      }

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseChapters();
        if (s2 === peg$FAILED) {
          s2 = peg$c2;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parse_();
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c3(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c0); }
      }

      peg$cache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseChapters() {
      var s0, s1, s2;

      var key    = peg$currPos * 47 + 1,
          cached = peg$cache[key];

      if (cached) {
        peg$currPos = cached.nextPos;
        return cached.result;
      }

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$parseChapter();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseChapters();
        if (s2 === peg$FAILED) {
          s2 = peg$c2;
        }
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c5(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c4); }
      }

      peg$cache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseChapter() {
      var s0, s1, s2;

      var key    = peg$currPos * 47 + 2,
          cached = peg$cache[key];

      if (cached) {
        peg$currPos = cached.nextPos;
        return cached.result;
      }

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$parseHeadline();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseContents();
        if (s2 === peg$FAILED) {
          s2 = peg$c2;
        }
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c7(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c6); }
      }

      peg$cache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseHeadline() {
      var s0, s1, s2, s3, s4, s5, s6;

      var key    = peg$currPos * 47 + 3,
          cached = peg$cache[key];

      if (cached) {
        peg$currPos = cached.nextPos;
        return cached.result;
      }

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = [];
      if (input.charCodeAt(peg$currPos) === 61) {
        s2 = peg$c10;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c11); }
      }
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          if (input.charCodeAt(peg$currPos) === 61) {
            s2 = peg$c10;
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c11); }
          }
        }
      } else {
        s1 = peg$c1;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseBraceArg();
        if (s2 === peg$FAILED) {
          s2 = peg$c2;
        }
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parseSpace();
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parseSpace();
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseSinglelineContent();
            if (s4 !== peg$FAILED) {
              s5 = [];
              s6 = peg$parseNewline();
              while (s6 !== peg$FAILED) {
                s5.push(s6);
                s6 = peg$parseNewline();
              }
              if (s5 !== peg$FAILED) {
                peg$reportedPos = s0;
                s1 = peg$c12(s1, s2, s4);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$c1;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c1;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c8); }
      }

      peg$cache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseContents() {
      var s0, s1, s2, s3, s4;

      var key    = peg$currPos * 47 + 4,
          cached = peg$cache[key];

      if (cached) {
        peg$currPos = cached.nextPos;
        return cached.result;
      }
